Closed Bug 1180899 Opened 11 years ago Closed 11 years ago

MOZ_ASSERT(result) at gfx/layers/apz/src/APZCTreeManager.cpp:1526

Categories

(Core :: Panning and Zooming, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: gwagner, Assigned: botond)

References

Details

Attachments

(4 files)

Attached file bt
On current trunk during monkey testing with debug gecko.
Blocks: 1168630
What are the steps to reproduce? I don't know what monkey testing is.
The monkey testing framework is a script that generates random input events on B2G: https://github.com/mozilla-b2g/B2G/blob/master/scripts/run-monkey.sh I believe it happened during FTU when it opened a link in a new window but I don't have a real STR. I could add a logging patch and see if it reproduces. Botond knows how to run this script. Maybe he can reproduce.
I can try. ni'ing myself so I don't forget.
Flags: needinfo?(botond)
I found STR: Run the FTU (First time usage app) In the geolocation panel open the privacy link Open Marketplace and start touching the screen.
Attached image b2g-ftu-marketplace.png
(In reply to Gregor Wagner [:gwagner] from comment #4) > I found STR: > > Run the FTU (First time usage app) > In the geolocation panel open the privacy link > Open Marketplace and start touching the screen. When I try following this STR, this is what I see when I got to Marketplace. Not sure what's up with that...
Flags: needinfo?(botond)
Tried again today, that broken-looking screen is gone, but the Marketplace thinks I'm not connected to the Internet (even though I am, and browsing works...).
I can still repro on current trunk with debug gecko: https://www.youtube.com/watch?v=ThL4JgM0BPY
(In reply to Gregor Wagner [:gwagner] from comment #7) > I can still repro on current trunk with debug gecko: > https://www.youtube.com/watch?v=ThL4JgM0BPY Thanks, that helped me repro it! (The trick was to tap quickly after pressing "Marketplace" (without waiting for the resulting page to load), and to tap near the rocketbar area.)
Attached is an APZC tree dump with the layers-id-roots annotated: It seems to be in order, i.e. each layers id has a layers-id-root APZC. I would expect the breadth-first search on the line preceding the assertion to find one of these. I'll have to debug it to see why it doesn't.
(In reply to Botond Ballo [:botond] from comment #9) > Created attachment 8632372 [details] > APZC tree dump with layers-id-roots annotated > > Attached is an APZC tree dump with the layers-id-roots annotated: > > It seems to be in order, i.e. each layers id has a layers-id-root APZC. Actually, I overlooked that there's a second RefLayer there with no APZC. The hit testing is a layer in that RefLayer's subtree, and then we're failing to find a layers-id-root APZC for it.
There is a bug in the logic added in bug 1168629 for ensuring that there's always at least one layer with metrics for the root scroll frame or root element, where on a subsequent paint the metrics added on the previous paint can be clobbered.
Bug 1180899 - Do not clobber frame metrics on the root layer added during a previous paint if there is no other frame metrics for the root scroll frame. r=tn
Attachment #8633101 - Flags: review?(tnikkel)
Assignee: nobody → botond
Attachment #8633101 - Flags: review?(tnikkel) → review+
Blocks: 1168629
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Blocks: 1177908
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: